########################################################################

ats-lang-anariats-0.1.1:

1. A type [schar] for signed chars is added. Now, the type [char] depends
   on the interpretation of the C compiler used to compile the C code that
   is generated from ATS programs by [atsopt].

2. [scase] is now supported.

3. [x1,x2:int] <pat> is now a legal pattern; it is equivalent to the following
   pattern [x1:int,x2:int] <pat>

4. It is now allowed in ATS to allocate (linear) arrays on stack at run-time.

########################################################################

ats-lang-anariats-0.1.0:

1. The syntax for template implementation is changed:
   previous syntax: implement foo<a,b><c> (...) = ...
   current  syntax: implement{a,b}{c} foo (...) = ...

2. It is now allowed to implement a special template instantiation:
   implement foo<double,string><int> (...) = ...

3. Various bug fixes can be found in BUGS.txt.

########################################################################

ats-lang-anariats-0.0.2:

1. fixed a bug affecting [nonfix] declarations.

2. [ats_trans1.dats] is splitted into the following two:
   [ats_trans1_sat.dats] and [ats_trans1_dyn.dats]

3. Make/Install is significantly improved. There is no need to set
   ATSHOME (and ATSHOMERELOC) before 'make all' is executed.

4. The confusion between array and array0 is resolved.

5. [EXAMPLE/SHOOTOUT/SUMBIT] is created.

6. The function [intvec_normalize_gte] did not handle the case [gcd > 1]
   correctly. It is fixed now.

7. The incorrect handling of [continue] in a for loop is fixed now.  See
   [BUGS.txt]

8. The command [atspackage] no longer puts the source code for Anairiats
   into a distribution.

########################################################################