@@ -38,7 +38,7 @@
 -->
 </CENTER>
 
-<HR SIZE=6 ALIGN=LEFT><P>
+<HR SIZE=2 ALIGN=LEFT COLOR="000000"><P>
 
 <MENU>
 <LI> <A href="#what_is_ats">What is ATS?</A>
@@ -51,7 +51,7 @@ The current <B>stable</B> release is <a href="http://sourceforge.net/projects/at
 <LI> <A href="#simple_ats_programs">Some Simple ATS Programs</A>
 </MENU>
 
-<HR SIZE=6 ALIGN=LEFT><P>
+<HR SIZE=2 ALIGN=LEFT COLOR="000000"><P>
 
 <MENU>
 <LI><H3><A id="what_is_ats" name="what_is_ats">What is
