@@ -24,7 +24,7 @@ probably any programming language that may be considered practical.
 
 The interfaces for various functions on persistent arrays can be found in
 the file <A
-HREF="http://www.ats-lang.org/IMPLEMENTATION/Anairiats/ATS/prelude/SATS/array.sats">$ATSHOME/prelude/SATS/array.sats</A>.
+HREF="http://www.ats-lang.org/IMPLEMENTATION/Anairiats/ATS/prelude/SATS/array.sats">prelude/SATS/array.sats</A>.
 
 Given a viewtype <i>VT</i> and an integer <i>I</I>, the type <i>array(VT,
 I)</i> is for persistent arrays of size <i>I</i> in which each element is
@@ -108,8 +108,7 @@ is often referred to as a square matrix.
 <P>
 
 The interfaces for various functions on matrices can be found in the file
-<a href="../../IMPLEMENTATION/Anairiats/ATS/prelude/SATS/matrix.sats">
-$ATSHOME/prelude/SATS/matrix.sats
+<a href="../../IMPLEMENTATION/Anairiats/ATS/prelude/SATS/matrix.sats">prelude/SATS/matrix.sats
 </a>.
 
 Given a viewtype <i>VT</i> and an integer <i>I</I> and another integer
