@@ -66,6 +66,6 @@ For your information, the command <i>atscc</i> is not implemented in a
 scripting language. It is one of the very first programs implemented in
 ATS/Geizella (and then ported to ATS/Anairiats). The code for <i>atscc</i>
 (and several other commands) can be found at <A
-HREF="https://ats-lang.svn.sourceforge.net/svnroot/ats-lang/trunk/utils/scripts/">$ATSHOME/utils/scripts/</A>.
+HREF="https://ats-lang.svn.sourceforge.net/svnroot/ats-lang/trunk/utils/scripts/">utils/scripts/</A>.
 
 <!-- end of [compilation.html] -->
