@@ -22,7 +22,7 @@ extension ".hats".
 A common use of file inclusion is to keep some constants, flags or
 parameters being defined consistently across a set of files. For instance,
 the file <A
-HREF="http://www.ats-lang.org/IMPLEMENTATION/Anairiats/ATS/prelude/params.hats">$ATSHOME/prelude/params.hats</A>
+HREF="http://www.ats-lang.org/IMPLEMENTATION/Anairiats/ATS/prelude/params.hats">prelude/params.hats</A>
 serves such a purpose.
 <P>
 
