@@ -13,11 +13,10 @@ for a unary function application.
 
 In ATS, each identifier can be assigned one of the following fixities:
 prefix, infix and postfix.  The fixity declarations for many commonly used
-identifiers can be found in
-<a href="../../IMPLEMENTATION/Anairiats/ATS/prelude/fixity.ats">
-$ATSHOME/prelude/fixity.ats</a>.
-We often use the name <i>operator</i> to refer to an identifier
-that is assigned a fixity.
+identifiers can be found in <A
+HREF="http://www.ats-lang.org/IMPLEMENTATION/Anairiats/ATS/prelude/fixity.ats">prelude/fixity.ats</A>.
+We often use the name <i>operator</i> to refer to an identifier that is
+assigned a fixity.
 <P>
 
 For instance, we use the following syntax to declare that <i>+</i> and
@@ -99,7 +98,8 @@ nonfix iadd fadd padd uadd
 
 Lastly, please note that fixity declarations are lexically scoped, and each
 fixity declaration is only effective within its legal scope.
-
 <P>
+
+<HR SIZE=1 ALIGN=LEFT><P>
 
 <!-- end of [fixity.html] -->
