@@ -30,8 +30,7 @@ The special operatior <i>!</i> in ATS is overloaded with the function <i>lazy_fo
 <P>
 
 In the file
-<a href="../../IMPLEMENTATION/Anairiats/ATS/prelude/SATS/lazy.sats">
-$ATSHOME/prelude/SATS/lazy.sats</a>,
+<a href="../../IMPLEMENTATION/Anairiats/ATS/prelude/SATS/lazy.sats">prelude/SATS/lazy.sats</a>,
 the following datatype <i>stream_con</i> and type <i>stream</i> are
 declared for representing (lazy) streams:
 
@@ -42,8 +41,7 @@ declared for representing (lazy) streams:
 </FONT></PRE>
 
 Also, a number of common functions on streams are implemented in
-<a href="../../IMPLEMENTATION/Anairiats/ATS/prelude/DATS/lazy.dats">
-$ATSHOME/prelude/DATS/lazy.dats</a>.
+<a href="../../IMPLEMENTATION/Anairiats/ATS/prelude/DATS/lazy.dats">prelude/DATS/lazy.dats</a>.
 <P>
 
 To simplify the presentation, we use the following
