@@ -17,7 +17,7 @@ as an array view.
 
 The interfaces for various functions on linear arrays can be found in the
 file <A
-HREF="http://www.ats-lang.org/IMPLEMENTATION/Anairiats/ATS/prelude/SATS/array.sats">$ATSHOME/prelude/SATS/array.sats</A>.
+HREF="http://www.ats-lang.org/IMPLEMENTATION/Anairiats/ATS/prelude/SATS/array.sats">prelude/SATS/array.sats</A>.
 In particular, we have the following functions for manipulating array views:
 
 <pre>
@@ -57,7 +57,7 @@ initialized.
 
 After an uninitialized array is created, it needs to be initialized for
 use. There are various functions for initializing linear arrays in <A
-HREF="http://www.ats-lang.org/IMPLEMENTATION/Anairiats/ATS/prelude/SATS/array.sats">$ATSHOME/prelude/SATS/array.sats</A>.
+HREF="http://www.ats-lang.org/IMPLEMENTATION/Anairiats/ATS/prelude/SATS/array.sats">prelude/SATS/array.sats</A>.
 As an example, we implement as follows a function that initializes an array
 with a list of elements:
 
