@@ -42,9 +42,8 @@ $lst (1, 2, 3) // this is equivalent to '[1, 2, 3]
 $lst {Nat} (1, 2, 3) // [Nat] is given as the type for the list elements
 </pre>
 
-The interfaces for various functions on lists can be found in the file
-<a href="http://www.ats-lang.org/IMPLEMENTATION/Anairiats/ATS/prelude/SATS/list.sats">
-$ATSHOME/prelude/SATS/list.sats</a>.
+The interfaces for various functions on lists can be found in the file <A
+HREF="http://www.ats-lang.org/IMPLEMENTATION/Anairiats/ATS/prelude/SATS/list.sats">prelude/SATS/list.sats</A>.
 <P>
 
 We now present some simple programs involving lists.  The following code
