@@ -57,8 +57,8 @@ There are two forms of LISP-like macros in ATS: short form and long form.
 These (untyped) macros are highly flexible and expressive, and they
 <i>can</i> certainly be used in convoluted manners that should probably be
 avoided in the first place. Some commonly used macro definitions can be
-found in <a href="../../IMPLEMENTATION/Anairiats/ATS/prelude/macrodef.ats">
-$ATSHOME/prelude/macrodef.ats</a>.
+found in <A
+HREF="http://www.ats-lang.org/IMPLEMENTATION/Anairiats/ATS/prelude/macrodef.sats">prelude/macrodef.sats</A>.
 In order to use LISP-like macros in ATS effectively, the programmer may
 want to find some examples in LISP involving backquote-comma-notation.
 <P>
