@@ -13,7 +13,8 @@ it can be defined as follows:
 </FONT></PRE>
 
 The interfaces for various functions on references can be found in the file
-<A HREF="http://www.ats-lang.org/IMPLEMENTATION/Anairiats/ATS/prelude/SATS/reference.sats">$ATSHOME/prelude/SATS/reference.sats</A>.
+<A
+HREF="http://www.ats-lang.org/IMPLEMENTATION/Anairiats/ATS/prelude/SATS/reference.sats">prelude/SATS/reference.sats</A>.
 <P>
 
 <B>Reference Creation</B>&nbsp;&nbsp;
