@@ -33,7 +33,7 @@
 <H1>Tutorial on ATS/Anairiats</H1>
 </CENTER>
 
-<HR SIZE=6 ALIGN=LEFT><P>
+<HR SIZE=2 ALIGN=LEFT COLOR="000000"><P>
 
 This website contains a set of tutorials for people interested in
 learning <I>ATS/Anairiats</I>. ATS is a functional language that supports a
@@ -45,7 +45,8 @@ comparable to imperative languages like C and C++.
 We encourage ATS programmers to write tutorials on ATS features, which are
 rich and often complex, and make them available to the ATS community.
 <P>
-<HR SIZE=6 ALIGN=LEFT><P>
+
+<HR SIZE=2 ALIGN=LEFT COLOR="000000"><P>
 
 <H2>Tutorial Topics
 <FONT size="+0">(<A HREF="contents/tutorial_all.html">all-topics-in-one-file</A>)</FONT>
@@ -59,6 +60,13 @@ a big plus as a considerably large part of the syntax of ATS is adopted
 from SML.  In addition, some solid understanding of C (especially, memory
 allocation/deallocation in C) can be highly valuable for learning features
 involving linear types in ATS.
+<P>
+
+The name of the ATS home directory is stored in the environment variable
+<i>ATSHOME</i>, and we often use <i>$ATSHOME</i> to refer to this name.  In
+the tutorial, if a file <i>FILE</i> is mentioned, then the absolute full
+name for this file is <i>$ATSHOME/FILE</i> unless specified otherwise.
+<P>
 
 <MENU>
 
